replace instace variables with local variables.

--- a/app/views/layouts/_patient_information.html.erb
+++ b/app/views/layouts/_patient_information.html.erb
@@ -13,7 +13,7 @@
   </thead>
 
   <tbody>
-    <% @patients.each do |patient| %>
+    <% patients.each do |patient| %>
       <tr>
         <td><%= patient.medical_number %></td>
         <td><%= patient.full_name %></td>
