replace instance variable with local variable.

--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,5 +1,5 @@
 <h1><%= t('new_patient', :scope => :patient) %></h1>
 
-<%= render 'form' %>
+<%= render 'form', :patient => @patient %>
 
 <%= link_to 'Back', patients_path %>
