--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t("edit_patient") %></h1>
 
-<%= render 'form' %>
+<%= render 'form', :patient => @patient %>
 
 <%= link_to t("show"), @patient %> |
 <%= link_to t("back"), patients_path %>
