--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -37,7 +37,7 @@
 
 <p>
   <strong><%= t("location", :scope => :location) %></strong>
-  <%= link_to @patient.location.name, location_path(@patient.location) %>
+  <%= link_to @patient.location_name, location_path(@patient.location) %>
 </p>
 
 <p>
